force-app/main/default/objects/Training_Videos_Config__mdt/Training_Videos_Config__mdt.object-meta.xml
<CustomObject>
    <label>Training Videos Config</label>
    <pluralLabel>Training Videos Configs</pluralLabel>
</CustomObject>