force-app/main/default/objects/Training_Videos_Config__mdt/fields/Menu_Name__c.field-meta.xml
<CustomField>
    <fullName>Menu_Name__c</fullName>
    <label>Menu Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>