force-app/main/default/objects/Training_Videos_Config__mdt/fields/Menu_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Menu_Sort_Order__c</fullName>
    <label>Menu Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>