force-app/main/default/objects/Training_Videos_Config__mdt/fields/Sub_Menu_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Menu_Name__c</fullName>
    <label>Sub Menu Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>