force-app/main/default/objects/Training_Videos_Config__mdt/fields/URL_Label__c.field-meta.xml
<CustomField>
    <fullName>URL_Label__c</fullName>
    <label>URL Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>